--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Печатная машинка</title>
 </head>
 <body>
-    <div class="container">
-        
-    </div>
+    <div class="wrapper"><div class="container">
+    </div></div>
+    
     <script src="script.js"></script>
 </body>
 </html>
